<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tp2"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/message1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parte_1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/atv1ButtonId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message1"
        android:text="@string/atividade_1"
        android:layout_marginHorizontal="20sp" />

    <Button
        android:id="@+id/atv2ButtonId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atv1ButtonId"
        android:text="@string/atividade_2"
        android:layout_marginHorizontal="20sp" />

    <Button
        android:id="@+id/atv3ButtonId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atv2ButtonId"
        android:text="@string/atividade_3"
        android:layout_marginHorizontal="20sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parte_2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/atv3ButtonId"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/atvpt2ButtonId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        android:text="@string/atividade_4"
        android:layout_marginHorizontal="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>