<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atividade1">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atividade_1"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="10sp"
        />

    <EditText
        android:id="@+id/inputAId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enter_a_number"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputBId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enter_a_number"
        app:layout_constraintTop_toBottomOf="@id/inputAId"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/sumButtonId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBId"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sumButtonId" />

    <Button
        android:id="@+id/returnButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnStart"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>