<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atividade4">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atividade_4"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText
            android:id="@+id/luminosityInfoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="10sp"
            android:hint="@string/luminosity"
            android:inputType="text"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/luminosityInfoId"
            app:layout_constraintTop_toBottomOf="@id/luminosityInfoId">

            <EditText
                android:id="@+id/latitudeInfoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:padding="10sp"
                android:hint="@string/latitude"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/longitudeInfoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:padding="10sp"
                android:hint="@string/longitude"
                android:inputType="text"
                android:autofillHints="" />

            <Button
                android:id="@+id/updateGPSButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateGPS"/>

        </LinearLayout>

        <EditText
            android:id="@+id/temperatureInfoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="10sp"
            android:hint="@string/temperature"
            android:inputType="text"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/coordinates"/>

    </LinearLayout>

    <Button
        android:id="@+id/returnButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnStart"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>