<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atividade2">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atividade_2"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText
            android:id="@+id/inputId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""

            android:hint="@string/enter_a_message"
            android:inputType="text" />

        <Button
            android:id="@+id/sendButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/returnButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnStart"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>